@@ -1,3 +1,9 @@
+Mon Jun  9 19:34:17 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>
+
+        * dds/DCPS/transport/framework/TransportSendStrategy.cpp:
+
+          Check for null element in adjust_packet_after_send.
+
 Tue Jun  3 20:56:08 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>
 
         * dds/InfoRepo/DCPS_IR_Participant.cpp:
